--- a/MyKTGG/Base.lproj/Main.storyboard
+++ b/MyKTGG/Base.lproj/Main.storyboard
@@ -23,21 +23,28 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Welcome" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="lk1-Vo-Wyv">
-                                <rect key="frame" x="16" y="118" width="343" height="47"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Welcome" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontForContentSizeCategory="YES" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="lk1-Vo-Wyv">
+                                <rect key="frame" x="16" y="94" width="343" height="119"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="39"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="vxp-66-GHi">
-                                <rect key="frame" x="105" y="222" width="164" height="91"/>
+                                <rect key="frame" x="105" y="381" width="164" height="91"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <state key="normal" title="Button"/>
                                 <connections>
                                     <action selector="restart:" destination="BYZ-38-t0r" eventType="touchUpInside" id="TV6-CT-IR0"/>
                                 </connections>
                             </button>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Group" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontForContentSizeCategory="YES" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="cWE-3T-zxM">
+                                <rect key="frame" x="16" y="221" width="343" height="143"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="41"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
                         </subviews>
                         <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
@@ -48,16 +55,22 @@
                                 <action selector="logOutAction:" destination="BYZ-38-t0r" id="Cl1-CD-beo"/>
                             </connections>
                         </barButtonItem>
+                        <barButtonItem key="rightBarButtonItem" title="Group Choose" id="API-nh-TEe">
+                            <connections>
+                                <segue destination="wJu-1p-ihV" kind="show" id="5CF-S0-1Jd"/>
+                            </connections>
+                        </barButtonItem>
                     </navigationItem>
                     <simulatedNavigationBarMetrics key="simulatedTopBarMetrics" prompted="NO"/>
                     <simulatedToolbarMetrics key="simulatedBottomBarMetrics"/>
                     <connections>
+                        <outlet property="GroupLabel" destination="cWE-3T-zxM" id="8zr-hQ-GhN"/>
                         <outlet property="WelcomeLabel" destination="lk1-Vo-Wyv" id="ApT-OX-xzt"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1092" y="124.58770614692655"/>
+            <point key="canvasLocation" x="1809" y="-614"/>
         </scene>
         <!--Auth View Controller-->
         <scene sceneID="F33-o8-NF7">
@@ -142,7 +155,7 @@
                                     <color key="titleColor" red="0.65098039220000004" green="0.73725490199999999" blue="0.81568627449999997" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 </state>
                                 <connections>
-                                    <action selector="forgonPasswordAction:" destination="jDS-EW-EeY" eventType="touchUpInside" id="eNl-Qo-qlX"/>
+                                    <action selector="forgotPasswordAction:" destination="jDS-EW-EeY" eventType="touchUpInside" id="eNl-Qo-qlX"/>
                                     <segue destination="24V-pT-goR" kind="show" id="3xA-BR-t2Q"/>
                                 </connections>
                             </button>
@@ -200,15 +213,29 @@
                                 <rect key="frame" x="39" y="42" width="294" height="46"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                             </imageView>
+                            <view contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="bAK-3B-Eeu">
+                                <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <subviews>
+                                    <activityIndicatorView opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" fixedFrame="YES" style="large" translatesAutoresizingMaskIntoConstraints="NO" id="CZp-oD-KVP">
+                                        <rect key="frame" x="177" y="323" width="20" height="20"/>
+                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                        <color key="color" cocoaTouchSystemColor="groupTableViewBackgroundColor"/>
+                                    </activityIndicatorView>
+                                </subviews>
+                                <color key="backgroundColor" white="0.0" alpha="0.3123394692" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                            </view>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <viewLayoutGuide key="safeArea" id="XdL-aI-H1n"/>
                     </view>
                     <nil key="simulatedTopBarMetrics"/>
                     <connections>
+                        <outlet property="ActivityIndicator" destination="CZp-oD-KVP" id="OjT-IX-Vy0"/>
                         <outlet property="AuthLabel" destination="7ec-UT-m4V" id="ZWZ-Jc-3v4"/>
                         <outlet property="LoginSubButton" destination="I7m-CZ-rmN" id="99w-F5-9Ij"/>
                         <outlet property="RegisterButton" destination="2yh-iq-MU6" id="TpE-Mp-ffX"/>
+                        <outlet property="darkView" destination="bAK-3B-Eeu" id="dJG-0S-omC"/>
                         <outlet property="emailTextField" destination="GNT-a7-gya" id="4Wy-v9-thS"/>
                         <outlet property="emailTextFieldView" destination="dE0-Ha-e6n" id="zwE-90-YH5"/>
                         <outlet property="forgotPasswordButton" destination="n9s-tc-GC3" id="n0i-PP-2jN"/>
@@ -223,7 +250,62 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="wTB-pg-jIC" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1768.8" y="124.58770614692655"/>
+            <point key="canvasLocation" x="1809" y="125"/>
+        </scene>
+        <!--Group Choose View Controller-->
+        <scene sceneID="lJx-X7-tkm">
+            <objects>
+                <viewController storyboardIdentifier="GroupChooseViewController" id="wJu-1p-ihV" customClass="GroupChooseViewController" customModule="MyKTGG" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="sxi-pC-mFz">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="bg-shadow" translatesAutoresizingMaskIntoConstraints="NO" id="M8D-hb-p3f">
+                                <rect key="frame" x="-46" y="-52" width="466" height="835"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            </imageView>
+                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="zHN-W3-bai">
+                                <rect key="frame" x="40" y="519" width="294" height="58"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <state key="normal" title="Button" image="groupchoose"/>
+                                <connections>
+                                    <action selector="chooseButtonAction:" destination="wJu-1p-ihV" eventType="touchUpInside" id="ILF-E7-5Ft"/>
+                                </connections>
+                            </button>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="groupchooselabel" translatesAutoresizingMaskIntoConstraints="NO" id="SxA-KX-AXW">
+                                <rect key="frame" x="40" y="89" width="294" height="46"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            </imageView>
+                            <pickerView multipleTouchEnabled="YES" contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="2VQ-kD-Vna">
+                                <rect key="frame" x="89" y="225" width="197" height="216"/>
+                                <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
+                            </pickerView>
+                            <view contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="3sh-Ly-Rmc">
+                                <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <color key="backgroundColor" white="0.0" alpha="0.3123394691780822" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                            </view>
+                            <activityIndicatorView opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" fixedFrame="YES" style="large" translatesAutoresizingMaskIntoConstraints="NO" id="0gd-2n-Age">
+                                <rect key="frame" x="177" y="323" width="20" height="20"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <color key="color" cocoaTouchSystemColor="groupTableViewBackgroundColor"/>
+                            </activityIndicatorView>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <viewLayoutGuide key="safeArea" id="ejt-G4-AFj"/>
+                    </view>
+                    <navigationItem key="navigationItem" id="3OR-jT-QcL"/>
+                    <nil key="simulatedTopBarMetrics"/>
+                    <connections>
+                        <outlet property="ActivityIndicator" destination="0gd-2n-Age" id="jMo-C2-RNx"/>
+                        <outlet property="GroupPicker" destination="2VQ-kD-Vna" id="BfC-w1-vLD"/>
+                        <outlet property="chooseButtonView" destination="zHN-W3-bai" id="x6g-Xe-7zb"/>
+                        <outlet property="darkView" destination="3sh-Ly-Rmc" id="dku-CR-JP1"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="CB6-7v-r6m" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="2586" y="-115"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="MAo-aD-Jza">
@@ -241,14 +323,14 @@
                 </navigationController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="qs2-bA-3Wg" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="388" y="126"/>
+            <point key="canvasLocation" x="1033" y="-615"/>
         </scene>
         <!--Forgot Pass View Controller-->
         <scene sceneID="1x3-jy-KPM">
             <objects>
                 <viewController storyboardIdentifier="ForgotPassViewController" id="24V-pT-goR" customClass="ForgotPassViewController" customModule="MyKTGG" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="3Fm-PV-fDh">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="300"/>
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <view contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="pVG-8G-eu6">
@@ -292,7 +374,6 @@
                     <navigationItem key="navigationItem" id="WeB-KL-iwY"/>
                     <value key="contentSizeForViewInPopover" type="size" width="375" height="300"/>
                     <nil key="simulatedTopBarMetrics"/>
-                    <size key="freeformSize" width="375" height="300"/>
                     <connections>
                         <outlet property="emailFieldView" destination="pVG-8G-eu6" id="9VE-92-hI7"/>
                         <outlet property="emailTextField" destination="o4W-2B-q8W" id="Zoi-5f-ulw"/>
@@ -301,7 +382,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="hzt-tX-Tnf" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="2504.8000000000002" y="124.58770614692655"/>
+            <point key="canvasLocation" x="2586" y="555"/>
         </scene>
     </scenes>
     <resources>
@@ -310,6 +391,8 @@
         <image name="Google" width="66" height="66"/>
         <image name="bg-shadow" width="465" height="808"/>
         <image name="createAccountTitle" width="292.5" height="46.5"/>
+        <image name="groupchoose" width="315" height="60"/>
+        <image name="groupchooselabel" width="225.5" height="47"/>
         <image name="icon-account" width="20" height="19"/>
         <image name="icon-mail" width="21" height="16"/>
         <image name="icon-padlock" width="21" height="23.5"/>
