--- a/MyKTGG/Main.storyboard
+++ b/MyKTGG/Main.storyboard
@@ -19,7 +19,7 @@
         <!--KTGG-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="MyKTGG" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="BYZ-38-t0r" customClass="MainViewController" customModule="MyKTGG" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -30,32 +30,6 @@
                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Group 99" translatesAutoresizingMaskIntoConstraints="NO" id="jeA-uv-kjx">
                                 <rect key="frame" x="171" y="104" width="255" height="210"/>
                             </imageView>
-                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="p6F-of-XWL">
-                                <rect key="frame" x="0.0" y="346" width="414" height="550"/>
-                                <prototypes>
-                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="Cell" textLabel="lV1-De-Pag" style="IBUITableViewCellStyleDefault" id="QQj-ty-gtt">
-                                        <rect key="frame" x="0.0" y="28" width="414" height="43.5"/>
-                                        <autoresizingMask key="autoresizingMask"/>
-                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="QQj-ty-gtt" id="Tgv-sk-f3n">
-                                            <rect key="frame" x="0.0" y="0.0" width="414" height="43.5"/>
-                                            <autoresizingMask key="autoresizingMask"/>
-                                            <subviews>
-                                                <label opaque="NO" multipleTouchEnabled="YES" contentMode="left" insetsLayoutMarginsFromSafeArea="NO" text="" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="lV1-De-Pag">
-                                                    <rect key="frame" x="20" y="0.0" width="374" height="43.5"/>
-                                                    <autoresizingMask key="autoresizingMask"/>
-                                                    <fontDescription key="fontDescription" name=".AppleSystemUIFont" family=".AppleSystemUIFont" pointSize="17"/>
-                                                    <nil key="textColor"/>
-                                                    <nil key="highlightedColor"/>
-                                                </label>
-                                            </subviews>
-                                        </tableViewCellContentView>
-                                    </tableViewCell>
-                                </prototypes>
-                                <connections>
-                                    <outlet property="dataSource" destination="BYZ-38-t0r" id="dBv-42-srR"/>
-                                    <outlet property="delegate" destination="BYZ-38-t0r" id="zEF-kD-P1l"/>
-                                </connections>
-                            </tableView>
                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Group 98" translatesAutoresizingMaskIntoConstraints="NO" id="cbf-bo-OSs">
                                 <rect key="frame" x="225" y="164" width="162.5" height="209"/>
                             </imageView>
@@ -101,13 +75,9 @@
                         <color key="backgroundColor" red="0.0" green="0.40392156862745099" blue="0.30980392156862746" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
                             <constraint firstAttribute="trailing" secondItem="jeA-uv-kjx" secondAttribute="trailing" constant="-12" id="07s-Q0-jay"/>
-                            <constraint firstItem="p6F-of-XWL" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="D2a-1Q-WdC"/>
-                            <constraint firstAttribute="bottom" secondItem="p6F-of-XWL" secondAttribute="bottom" id="ER7-i9-qdC"/>
                             <constraint firstItem="jeA-uv-kjx" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="60" id="FQi-RB-u5U"/>
                             <constraint firstAttribute="trailing" secondItem="8P3-Xq-ecZ" secondAttribute="trailing" constant="-21" id="KfG-GK-Q6k"/>
                             <constraint firstAttribute="trailing" secondItem="Uq8-Fe-OFM" secondAttribute="trailing" constant="-109.5" id="ScS-Dk-d9G"/>
-                            <constraint firstItem="p6F-of-XWL" firstAttribute="top" secondItem="Onn-ho-7ju" secondAttribute="bottom" constant="8" id="UPE-EC-h8x"/>
-                            <constraint firstItem="p6F-of-XWL" firstAttribute="trailing" secondItem="6Tk-OE-BBY" secondAttribute="trailing" id="URb-y8-OCt"/>
                             <constraint firstItem="hlX-JR-kFG" firstAttribute="top" secondItem="jeA-uv-kjx" secondAttribute="bottom" constant="22" id="ZgB-hk-vLZ"/>
                             <constraint firstItem="cbf-bo-OSs" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="120" id="aMD-f2-yGn"/>
                             <constraint firstItem="8P3-Xq-ecZ" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="221" id="cqh-1o-fX6"/>
@@ -131,9 +101,6 @@
                     </navigationItem>
                     <nil key="simulatedTopBarMetrics"/>
                     <nil key="simulatedBottomBarMetrics"/>
-                    <connections>
-                        <outlet property="mainTableView" destination="p6F-of-XWL" id="5qe-ZC-6xz"/>
-                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
@@ -405,10 +372,6 @@
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="bg-shadow" translatesAutoresizingMaskIntoConstraints="NO" id="M8D-hb-p3f">
-                                <rect key="frame" x="-46" y="-52" width="466" height="835"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                            </imageView>
                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="groupchooselabel" translatesAutoresizingMaskIntoConstraints="NO" id="SxA-KX-AXW">
                                 <rect key="frame" x="45" y="79" width="334" height="47"/>
                             </imageView>
