--- a/MyKTGG/Main/BottomSheet/Cells/MainItemCell.xib
+++ b/MyKTGG/Main/BottomSheet/Cells/MainItemCell.xib
@@ -19,45 +19,44 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="MainItemCell" rowHeight="83" id="KGk-i7-Jjw" customClass="MainItemCell" customModule="Мій_КТГГ" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="551" height="83"/>
+        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="MainItemCell" rowHeight="80" id="KGk-i7-Jjw" customClass="MainItemCell" customModule="Мій_КТГГ" customModuleProvider="target">
+            <rect key="frame" x="0.0" y="0.0" width="551" height="80"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
-                <rect key="frame" x="0.0" y="0.0" width="551" height="83"/>
+                <rect key="frame" x="0.0" y="0.0" width="551" height="80"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
+                    <label opaque="NO" userInteractionEnabled="NO" tag="1" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumScaleFactor="0.90000000000000002" translatesAutoresizingMaskIntoConstraints="NO" id="MWH-AW-aqG">
+                        <rect key="frame" x="75" y="15" width="461" height="25.5"/>
+                        <fontDescription key="fontDescription" name="SourceSansPro-Bold" family="Source Sans Pro" pointSize="20"/>
+                        <nil key="highlightedColor"/>
+                    </label>
                     <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="deafult" translatesAutoresizingMaskIntoConstraints="NO" id="HBa-k3-PRe">
-                        <rect key="frame" x="15" y="24" width="50" height="50"/>
+                        <rect key="frame" x="15" y="15" width="50" height="50"/>
                         <color key="tintColor" red="0.0073049049819999996" green="0.40609508750000001" blue="0.30939430000000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
                             <constraint firstAttribute="width" constant="50" id="aoJ-Nx-hxA"/>
                         </constraints>
                     </imageView>
-                    <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillEqually" translatesAutoresizingMaskIntoConstraints="NO" id="tVx-DF-bnY">
-                        <rect key="frame" x="85" y="15" width="451" height="68"/>
-                        <subviews>
-                            <label opaque="NO" userInteractionEnabled="NO" tag="1" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="MWH-AW-aqG">
-                                <rect key="frame" x="0.0" y="0.0" width="451" height="34"/>
-                                <fontDescription key="fontDescription" name="SourceSansPro-Bold" family="Source Sans Pro" pointSize="20"/>
-                                <nil key="highlightedColor"/>
-                            </label>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="aRT-aU-E8O">
-                                <rect key="frame" x="0.0" y="34" width="451" height="34"/>
-                                <fontDescription key="fontDescription" name="SourceSansPro-SemiBold" family="Source Sans Pro" pointSize="15"/>
-                                <color key="textColor" systemColor="secondaryLabelColor"/>
-                                <nil key="highlightedColor"/>
-                            </label>
-                        </subviews>
-                    </stackView>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" text="Label" lineBreakMode="wordWrap" numberOfLines="6" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="aRT-aU-E8O">
+                        <rect key="frame" x="75" y="43" width="461" height="37"/>
+                        <fontDescription key="fontDescription" name="SourceSansPro-SemiBold" family="Source Sans Pro" pointSize="15"/>
+                        <color key="textColor" systemColor="secondaryLabelColor"/>
+                        <nil key="highlightedColor"/>
+                    </label>
                 </subviews>
                 <constraints>
+                    <constraint firstAttribute="bottom" secondItem="aRT-aU-E8O" secondAttribute="bottom" id="1hD-Uy-AhS"/>
                     <constraint firstItem="HBa-k3-PRe" firstAttribute="width" secondItem="HBa-k3-PRe" secondAttribute="height" multiplier="1:1" id="5G0-HS-pwH"/>
-                    <constraint firstItem="tVx-DF-bnY" firstAttribute="leading" secondItem="HBa-k3-PRe" secondAttribute="trailing" constant="20" id="AL1-gB-Wvu"/>
-                    <constraint firstAttribute="trailing" secondItem="tVx-DF-bnY" secondAttribute="trailing" constant="15" id="JI7-Fq-TxY"/>
-                    <constraint firstItem="tVx-DF-bnY" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="15" id="Sem-zB-Jus"/>
+                    <constraint firstAttribute="bottom" relation="greaterThanOrEqual" secondItem="HBa-k3-PRe" secondAttribute="bottom" id="8wS-TU-Phb"/>
+                    <constraint firstItem="aRT-aU-E8O" firstAttribute="leading" secondItem="MWH-AW-aqG" secondAttribute="leading" id="JJZ-VO-xxj"/>
+                    <constraint firstItem="MWH-AW-aqG" firstAttribute="leading" secondItem="HBa-k3-PRe" secondAttribute="trailing" constant="10" id="Lw5-8N-ZQ7"/>
+                    <constraint firstItem="aRT-aU-E8O" firstAttribute="trailing" secondItem="MWH-AW-aqG" secondAttribute="trailing" id="O5Y-wB-aCl"/>
                     <constraint firstItem="HBa-k3-PRe" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="15" id="Tax-xx-Um5"/>
-                    <constraint firstItem="HBa-k3-PRe" firstAttribute="centerY" secondItem="tVx-DF-bnY" secondAttribute="centerY" id="e8n-qh-Cpv"/>
-                    <constraint firstAttribute="bottom" secondItem="tVx-DF-bnY" secondAttribute="bottom" id="wYB-Rm-41X"/>
+                    <constraint firstAttribute="trailing" secondItem="MWH-AW-aqG" secondAttribute="trailing" constant="15" id="ZFI-NG-75W"/>
+                    <constraint firstItem="MWH-AW-aqG" firstAttribute="top" secondItem="HBa-k3-PRe" secondAttribute="top" id="fiQ-ei-RN0"/>
+                    <constraint firstItem="aRT-aU-E8O" firstAttribute="top" secondItem="MWH-AW-aqG" secondAttribute="bottom" constant="2.5" id="igf-oE-pcF"/>
+                    <constraint firstItem="HBa-k3-PRe" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="15" id="oI8-1A-1ZX"/>
                 </constraints>
             </tableViewCellContentView>
             <viewLayoutGuide key="safeArea" id="njF-e1-oar"/>
@@ -67,7 +66,7 @@
                 <outlet property="leftImageView" destination="HBa-k3-PRe" id="og6-kb-q22"/>
                 <outlet property="nameLabel" destination="MWH-AW-aqG" id="Cky-Rv-wUv"/>
             </connections>
-            <point key="canvasLocation" x="303.62318840579712" y="114.84375"/>
+            <point key="canvasLocation" x="303.62318840579712" y="113.83928571428571"/>
         </tableViewCell>
     </objects>
     <resources>
